<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_toggle_layout"
        android:icon="@drawable/ic_view_grid"
        android:title="@string/action_grid_view"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort_az"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_archived"
        android:checkable="true"
        android:title="@string/action_show_archived"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>

